fixed menu on mobile

--- a/scss/components/_language.scss
+++ b/scss/components/_language.scss
@@ -1,7 +1,7 @@
 .c-lang {
   position: relative;
   font-size: 1.9rem;
-  @include media("<=1200px") {
+  @include media("<=1700px") {
     font-size: 1.4rem;
   }
   @include media("<=999px") {
